fix right margin overflow in mobile view

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -38,7 +38,7 @@
   },
   "about": {
     "more": "¡Descubre más sobre mí!",
-    "content1": "Soy Xavier Berga, ingeniero informático nacido y criado en Lleida (Catalunya) y actualmente afincado en Zaragoza (España).",
+    "content1": "Soy Xavier Berga, ingeniero informático nacido y criado en Lleida (Catalunya) y actualmente residiendo en Zaragoza (España).",
     "content2": "Durante 5 años trabajé como desarrollador de software especializado en Microsoft Dynamics 365 Finance & Operations, participando en el desarrollo e implantación de soluciones orientadas a optimizar procesos empresariales y operativos.",
     "content3": "Actualmente trabajo en AgroMind, empresa que cofundé, donde mejoro el firmware y los sensores, valido prototipos en campo y evoluciono la plataforma integrando modelos de IA para transformar datos en decisiones más inteligentes en el sector agrícola y ganadero.",
     "content4": "Además, trabajo también en InnovaOX, una empresa centrada en la monitorización de datos para reforzar la bioseguridad en granjas e industrias químicas y alimentarias mediante tecnologías IoT.",
