update font size

--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -7,7 +7,7 @@
   },
   "footer": {
     "designedby": "Dissenyat amb",
-    "designedby2": "per: Xavier Berga"
+    "designedby2": "per Xavier Berga"
   },
   "home": {
     "salute": "Benvingut/da!",
