--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,7 @@
   },
   "footer": {
     "designedby": "Designed with",
-    "designedby2": "by: Xavier Berga"
+    "designedby2": "by Xavier Berga"
   },
   "home": {
     "salute": "Hi there!",
