--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -7,7 +7,7 @@
   },
   "footer": {
     "designedby": "Diseñado con",
-    "designedby2": "por: Xavier Berga"
+    "designedby2": "por Xavier Berga"
   },
   "home": {
     "salute": "¡Hola!",
